--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,13 @@
   font-family: "Outfit", sans-serif;
 }
 
-#root{
+.root{
   display: flex;
-  min-height: 100vh;
+  max-height: 100vh;
+  animation: fadeIn 1.5s;
+}
+
+@keyframes fadeIn{
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
